# life-tracker

./: .clang-format  .gitignore  .pre-commit-config.yaml  MODULE.bazel  README.md  entries.json  report.html
data/: entries.csv
src/: BUILD.bazel  entry.cc  entry.h  entry_test.cc  main.cc  path_utils.cc  path_utils.h  path_utils_test.cc  stats.cc  stats.h  stats_test.cc  tracker.cc  tracker.h
web/: README.md  package-lock.json  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/data/: entries.json
